Fix user sorting in overview.

--- a/app/views/home_teacher/_overview_tab.html.erb
+++ b/app/views/home_teacher/_overview_tab.html.erb
@@ -17,8 +17,8 @@
           <table class='table' data-toggle='table'>
             <thead>
               <tr>
-                <th data-sortable='true'>First</th>
-                <th data-sortable='true'>Last</th>
+                <th data-sortable='true' data-sorter='nameSorter'>First</th>
+                <th data-sortable='true' data-sorter='nameSorter'>Last</th>
                 <th data-sortable='true'>Last Activity</th>
                 <th data-sortable='false'>Objective Summary</th>
                 <th data-sortable='false'>Assessments</th>
