Add notes field to Unit.

--- a/app/views/units/_form.html.erb
+++ b/app/views/units/_form.html.erb
@@ -5,6 +5,7 @@
     <%= f.input :title %>
     <%= f.input :soi, :label => 'Statement of Inquiry' %>
     <%= f.input :duration, :label => 'Duration (hours)' %>
+    <%= f.input :notes %>
   </div>
 
   <div class='tasks'>
