Validate that task_id is not being used in the rubric model.

--- a/app/views/tasks/_task_instructions.html.erb
+++ b/app/views/tasks/_task_instructions.html.erb
@@ -3,8 +3,7 @@
  #
  # Render the instructions for a task, with an edit button for privilaged users.
  #
- # TODO: pass collapsed/not-collapsed state.
- # XXX: ensure that id is unique.
+ # XXX: worry about having a unique id.
  %>
 <div class='task-instructions collapsible'>
   <button class='btn btn-info <%= collapse ? 'collapsed' : '' %>'
