Use sidebar on Tasks#show.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,6 +37,24 @@
 @import "units";
 @import "users";
 
+/*
+** Common Layout.
+*/
+
+.main {
+  float: left;
+  width: 60%;
+}
+
+.sidebar {
+  float: left;
+  width: 30%;
+  margin-left: 20px;
+  border-left: 1px solid gray;
+  padding-left: 10px;
+  font-size: 80%;
+}
+
 .clear { clear: both; }
 
 .timestamp-latest { font-weight: bold; }
