--- a/app/views/home_student/show.html.erb
+++ b/app/views/home_student/show.html.erb
@@ -1,12 +1,19 @@
-<% if current_user %>
-  <div id='student-status-main'>
+<%
+ # app/views/home_student.html.erb
+ #
+ # TODO: figure out why we need to guard on current_user
+ %>
+
+ <% if current_user %>
+  <div id='student-status-main' class='main student-status'>
     <h1><%= @user.name %></h1>
     <h2>Posts</h2>
       <%= render 'post_nav_links' %>
       <br><br>
       <%= render 'posts/post_index' %>
+      <%= render 'post_nav_links' %>
   </div>
-  <div id='student-status'>
+  <div id='student-status' class='sidebar'>
     <h2><%= Course.find(@user.sections[0].course_id).title %></h2>
     <ul>
       <% @assessments.order(due_date: :desc).each do |a| %>
@@ -16,8 +23,5 @@
         <span></li>
       <% end %>
     </ul>
-  </div>
-  <div class='clear student-status nav-links'>
-    <%= render 'post_nav_links' %>
   </div>
 <% end %>
