--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,7 @@
+<%
+ # app/views/posts/_form.html.erb
+ %>
+
 <%= simple_form_for [@user, @post], horizontal_form do |f| %>
     <div class="row">
       <div class="col-sm-7">
@@ -14,9 +18,12 @@
         <%= render 'assessment_picker', f: f %>
         <div class='post-instructions collapsible'>
           <% if @post.assessment_id %>
-            <%= render 'tasks/task_instructions',
+            <%= render 'layouts/collapsible_wrapper',
+              label: 'Instructions',
+              partial: 'tasks/task_instructions',
               collapse: @post.body == nil ? false : true,
-              task: @post.assessment.tasks[0]
+              params: { task: @post.assessment.tasks[0] },
+              target: 'instructions'
             %>
           <% else %>
           <p>Instructions will be visible here if you select the assessment and
@@ -30,7 +37,8 @@
               <%= render 'image_fields', f: image_form %>
           <% end %>
           <div>
-            <%= link_to_add_association 'add an image', f, :images, class: 'list-group-item list-group-item-success' %>
+            <%= link_to_add_association 'add an image', f,
+                  :images, class: 'list-group-item list-group-item-success' %>
           </div>
         </div>
       </div>
