Better links for assessments (no spurious new posts).

--- a/app/views/home_student/show.html.erb
+++ b/app/views/home_student/show.html.erb
@@ -19,8 +19,7 @@
       <% @assessments.order(due_date: :desc).each do |a| %>
         <li class='student-status <%= annunciator(a) %>'><span class='student-status'>
           <%= link_to a.title,
-                new_user_post_path(user_id: current_user.id,
-                                   assessment_id: a.id)
+            new_or_edit(current_user, a)
           %><br>
           Due: <%= a.due_date.to_date.to_s(:long) %>
         <span></li>
