--- a/app/views/rubrics/_form.html.erb
+++ b/app/views/rubrics/_form.html.erb
@@ -10,10 +10,11 @@
     <%= f.association :strand,
                       include_blank: '--- Select Objective Strand ---' %>
 
+    <%# TODO: set bands dynamically %>
     <%= f.input :band, as: :radio_buttons,
                 collection: [ '0', '1-2', '3-4', '5-6', '7-8' ]%>
 
-    <%= f.input :criterion %>
+    <%= f.input :criterion, input_html: {rows: 8} %>
   </div>
 
   <div class="form-actions">
