Fix 500 due to braino in previous fix.

--- a/app/views/tasks/_task_instructions.html.erb
+++ b/app/views/tasks/_task_instructions.html.erb
@@ -8,7 +8,7 @@
 <% if task %>
   <p>
     <%# binding.pry %>
-    <%= if task then task markdown Task.find(task).body end %>
+    <%= if task then markdown Task.find(task).body end %>
   </p>
   <%= if policy(task).edit? then link_to 'Edit', edit_task_path(task) end %>
 <% end %>
