Display instructions & rubric when starting new post from home_student.

--- a/app/views/layouts/_collapsible_wrapper.html.erb
+++ b/app/views/layouts/_collapsible_wrapper.html.erb
@@ -19,7 +19,7 @@
      type='button' data-toggle='collapse' data-target='#<%= target %>'>
      <%= label %>
   </button>
-  <div id='<%= target %>' class='collapse <%= collapse ? 'collapsed' : '' %>'>
+  <div id='<%= target %>' class='collapse <%= collapse ? '' : 'in' %>'>
     <%= render partial, params %>
  </div>
 </div>
