--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
   <%= render 'layouts/navbar' %>
 
-  <div class='container'>
+  <div id='main-content' class='container'>
 
     <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, class: "alert alert-info" %>
