--- a/app/views/rubrics/_form.html.erb
+++ b/app/views/rubrics/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for(@rubric) do |f| %>
+  <% binding.pry %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
@@ -15,6 +16,7 @@
                 collection: [ '0', '1-2', '3-4', '5-6', '7-8' ]%>
 
     <%= f.input :criterion, input_html: {rows: 8} %>
+    <%= f.hidden_field :rubricable %>
   </div>
 
   <div class="form-actions">
