--- a/app/views/rubrics/_form.html.erb
+++ b/app/views/rubrics/_form.html.erb
@@ -1,5 +1,4 @@
 <%= simple_form_for(@rubric) do |f| %>
-  <% binding.pry %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
@@ -16,10 +15,13 @@
                 collection: [ '0', '1-2', '3-4', '5-6', '7-8' ]%>
 
     <%= f.input :criterion, input_html: {rows: 8} %>
-    <%= f.hidden_field :rubricable %>
+    <%= f.hidden_field :rubricable_id %>
+    <%= f.hidden_field :rubricable_type %>
+
   </div>
 
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
+
 <% end %>
