--- a/app/views/rubrics/_index.html.erb
+++ b/app/views/rubrics/_index.html.erb
@@ -23,7 +23,9 @@ grid(@rubrics_grid) do |g|
     end
   end
 
-  if current_user.teacher? || current_user.admin?
+  if params[:controller] == 'rubrics' && params[:action] == 'index' &&
+    (current_user.teacher? || current_user.admin?)
+    binding.pry
     g.column name: 'Level' do |t|
       t.level
     end
