--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,20 +15,20 @@
 </head>
 
 <body>
+  <div class='container-fluid'>
+    <%= render 'layouts/navbar' %>
 
-  <%= render 'layouts/navbar' %>
+    <div id='main-content' class='container-fluid'>
 
-  <div id='main-content' class='container'>
+      <% flash.each do |name, msg| %>
+        <%= content_tag :div, msg, class: "alert alert-info" %>
+      <% end %>
 
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, class: "alert alert-info" %>
-    <% end %>
+      <%= yield %>
 
-    <%= yield %>
+    </div>
 
+    <%= render 'layouts/footer' %>
   </div>
-
-  <%= render 'layouts/footer' %>
-
 </body>
 </html>
