--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,8 @@
 <h1>Editing Post</h1>
 
-<%= render 'form' %>
+<div>
+  <%= render 'form' %>
+</div>
 
 <%= link_to 'Show', [@user, @post ]%> |
 <%= link_to 'Back', [@user, :posts] %>
