Split assessments into columns so that they can be sorted.

--- a/app/views/home_teacher/_overview_student_detail.html.erb
+++ b/app/views/home_teacher/_overview_student_detail.html.erb
@@ -8,6 +8,6 @@
     <%= last_seen(student[:id]) %>
     <%= unclassified_posts(student[:id]) %>
   </td>
-  <td><%# TODO: display overall objective scores. %></td>
-  <td><%= assessment_overview(student[:id], course[:assessments]) %></td>
+  <%= objective_summary(student[:id], course) %>
+  <%= assessment_overview(student[:id], course[:assessments]) %>
 </tr>
