--- a/app/views/home_teacher/index.html.erb
+++ b/app/views/home_teacher/index.html.erb
@@ -11,6 +11,7 @@
   </ul>
   <div class="tab-content">
     <div id="tab1" class="tab-pane active">
+      <% title 'Overview' %>
       <%= render 'overview_tab' %>
     </div>
     <div id="tab2" class="tab-pane">
