--- a/app/views/home_teacher/_overview_tab.html.erb
+++ b/app/views/home_teacher/_overview_tab.html.erb
@@ -36,7 +36,7 @@
             </thead>
             <tbody>
               <% c[:students].each do |s| %>
-                <% cache overview_student_detail do %>
+                <% cache s do %>
                   <%= render 'overview_student_detail', course: c, student: s %>
                 <% end %>
               <% end %>
