--- a/app/assets/stylesheets/home_teacher.scss
+++ b/app/assets/stylesheets/home_teacher.scss
@@ -17,7 +17,12 @@
   }
   .scored-missing {
     background-color: red;
-    border: 6px solid blue;
+    border: 4px solid blue;
+  }
+
+  .updated {
+    background-color: yellow;
+    border: 4px solid blue;
   }
 
   // Score colors.
