--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
  %>
 <footer class='footer'>
   <% if user_signed_in? || Rails.env.development? %>
-    <div class='container'>
+    <div class='container-fluid'>
       <div id='footer-become'>
         <% if policy(User).become? %>
           <%= render 'layouts/su' %>
