--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= (content_for :title).nil? ? 'MRHS Photo' : (yield :title) %></title>
+  <title>
+    <%= (content_for :title).nil? ? 'MRHS Photo' : (yield :title) %>
+  </title>
 
   <meta name="viewport"
     content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,7 +12,6 @@
     media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application',
     'data-turbolinks-track' => true %>
-
   <%= csrf_meta_tags %>
 </head>
 
@@ -23,12 +24,9 @@
     <% end %>
 
     <div id='main-content'>
-
       <%= yield %>
-
     </div>
-
-    <%= render 'layouts/footer' %>
   </div>
+  <%= render 'layouts/footer' %>
 </body>
 </html>
