More CSS / layout cleanups.

--- a/app/views/home_student/_invalid_account.html.erb
+++ b/app/views/home_student/_invalid_account.html.erb
@@ -6,4 +6,7 @@
     in again using your Highline Google account
     (your-student-number@g.highlineschools.org).
   </p>
+  <p>
+    If you've just joined that class, let me know and I'll add you.
+  </p>
 </div>
