--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,8 +41,12 @@
 ** Common Layout.
 */
 
+.alert {
+  margin-bottom: 8px;
+}
+
 #main-content {
-  margin-top: 60px;
+  margin-top: 58px;
 }
 
 .main {
