Include post_id when creating Score. Fix annunicators.

--- a/app/views/scores/_mini_form.html.erb
+++ b/app/views/scores/_mini_form.html.erb
@@ -1,6 +1,7 @@
 <div class='score-mini-form'>
   <%# XXX: setting drop here is asking for trouble. Set in model? %>
-  <% score = Score.for(strand: strand, user: student, assessment: assessment) %>
+  <% score = Score.for(
+    post: @post, strand: strand, user: student, assessment: assessment) %>
   <% score.score = num %>
 
 <%= simple_form_for score, horizontal_form.merge(remote: true) do |f| %>
@@ -13,6 +14,7 @@
     <%= f.input :strand_id, as: :hidden %>
     <%= f.input :user_id, as: :hidden %>
     <%= f.input :assessment_id, as: :hidden %>
+    <%= f.input :post_id, as: :hidden %>
     <%= f.input :score, as: :hidden %>
   <% end %>
 </div>
